<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="#8f000000"
        android:focusableInTouchMode="false"
        android:touchscreenBlocksFocus="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/passInput">

        <EditText
            android:id="@+id/edit_text_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/emailInput">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/regBut"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="100dp"
        android:text="@string/registration"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#ffffff"
        android:singleLine="true"
        android:textSize="17dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/logBut"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="170dp"
        android:text="@string/login"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#ffffff"
        android:singleLine="true"
        android:textSize="17dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loadingBar"
        android:layout_gravity="center" />

</FrameLayout>